2003-02-06  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-popen1.
	* tst-popen1.c: New file.

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Remove wrong
	but inactive generalization.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_signal.S: Likewise.
	Minor optimization, remove one instruction.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_broadcast.S: Likewise.

2003-02-04  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/fork.c: Correct order of parameters.

2003-01-31  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* init.c (__NR_set_tid_address): Add #ifdef for s390.
	* sysdeps/pthread/pthread_barrier_wait.c: New file.
	* sysdeps/pthread/pthread_cond_broadcast.c: New file.
	* sysdeps/pthread/pthread_cond_signal.c: New file.
	* sysdeps/pthread/pthread_cond_timedwait.c: New file.
	* sysdeps/pthread/pthread_cond_wait.c: New file.
	* sysdeps/pthread/pthread_rwlock_rdlock.c: New file.
	* sysdeps/pthread/pthread_rwlock_timedrdlock.c: New file.
	* sysdeps/pthread/pthread_rwlock_timedwrlock.c: New file.
	* sysdeps/pthread/pthread_rwlock_unlock.c: New file.
	* sysdeps/pthread/pthread_rwlock_wrlock.c: New file.
	* sysdeps/s390/Makefile: New file.
	* sysdeps/s390/bits/atomic.h: New file.
	* sysdeps/s390/pthread_spin_init.c: New file.
	* sysdeps/s390/pthread_spin_lock.c: New file.
	* sysdeps/s390/pthread_spin_trylock.c: New file.
	* sysdeps/s390/pthread_spin_unlock.c: New file.
	* sysdeps/s390/pthreaddef.h: New file.
	* sysdeps/s390/tcb-offsets.sym: New file.
	* sysdeps/s390/td_ta_map_lwp2thr.c: New file.
	* sysdeps/s390/tls.h: New file.
	* sysdeps/unix/sysv/linux/s390/bits/pthreadtypes.h: New file.
	* sysdeps/unix/sysv/linux/s390/bits/semaphore.h: New file.
	* sysdeps/unix/sysv/linux/s390/createthread.c: New file.
	* sysdeps/unix/sysv/linux/s390/dl-sysdep.h: New file.
	* sysdeps/unix/sysv/linux/s390/fork.c: New file.